--- a/src/scss/public.scss
+++ b/src/scss/public.scss
@@ -11,7 +11,7 @@ $ui-color-orange: #ff6c00;
 $ui-bg-color:rgb(243, 245, 247);
 
 // 边框
-$ui-border: 1px solid #ddd;
+$ui-border: 1px solid rgba(black,.07);
 $ui-border-radius: 4px;
 
 // 单位转换
