--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -368,28 +368,28 @@ input,textarea{
 
 @for $i from 0 through 10 {
     .mt#{$i*5} {
-        margin-top: #{$i*5}px;
+        margin-top: #{$i*5}px !important;
     }
     .mr#{$i*5} {
-        margin-right: #{$i*5}px;
+        margin-right: #{$i*5}px !important;
     }
     .mb#{$i*5} {
-        margin-bottom: #{$i*5}px;
+        margin-bottom: #{$i*5}px !important;
     }
     .ml#{$i*5} {
-        margin-left: #{$i*5}px;
+        margin-left: #{$i*5}px !important;
     }
     .pt#{$i*5} {
-        padding-top: #{$i*5}px;
+        padding-top: #{$i*5}px !important;
     }
     .pr#{$i*5} {
-        padding-right: #{$i*5}px;
+        padding-right: #{$i*5}px !important;
     }
     .pb#{$i*5} {
-        padding-bottom: #{$i*5}px;
+        padding-bottom: #{$i*5}px !important;
     }
     .pl#{$i*5} {
-        padding-left: #{$i*5}px;
+        padding-left: #{$i*5}px !important;
     }
 }
 
