--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -131,19 +131,19 @@ input,textarea{
 }
 
 // css滚动
-.scroll-y {
-    /* 使之可以滚动 */
-    overflow-y: scroll !important;
-    /* 滚动弹性弹性、并且让整个body不会随滚动内容一起乱跑 */
-    -webkit-overflow-scrolling: touch;
-    height: 100%;
-}
-// 开启横向滚动
-.scroll-x{
-    overflow-x: scroll !important;
-    -webkit-overflow-scrolling: touch;
-    width: 100%;
-}
+// .scroll-y {
+//     /* 使之可以滚动 */
+//     overflow-y: auto !important;
+//     /* 滚动弹性弹性、并且让整个body不会随滚动内容一起乱跑 */
+//     -webkit-overflow-scrolling: touch;
+//     height: 100%;
+// }
+// // 开启横向滚动
+// .scroll-x{
+//     overflow-x: auto !important;
+//     -webkit-overflow-scrolling: touch;
+//     width: 100%;
+// }
 
 // overflow
 .overflow-hide {
