--- a/src/scss/ui.scss
+++ b/src/scss/ui.scss
@@ -39,11 +39,9 @@
 
 // 撑满屏幕并居中的按钮
 .ui-button-large {
-    width: 80%;
-    height: 2.2rem;
-    margin: 1rem auto;
     display: block;
-    border-radius: 1.2rem;
+    padding-right:60px;
+    padding-left:60px;
 }
 
 .ui-button-text{
