--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -373,8 +373,8 @@ input,textarea{
     }
 }
 
-
-@for $i from 8 through 30 {
+// 小于10px的字体在高分屏下实在太小了，最好限制最小10px
+@for $i from 10 through 30 {
     .f#{$i} {
         font-size: #{$i}px;
     }
