--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -138,7 +138,7 @@ input,textarea{
 
 // flex布局
 .flex {
-    display: flex !important;
+    display: flex;
 
     &.inline{
         display: inline-flex;
