--- a/src/scss/vue-transition.scss
+++ b/src/scss/vue-transition.scss
@@ -27,15 +27,11 @@
 }
 
 // fade
-.fade-enter-active {
-  transition: all .3s ease;
+.fade-enter-active, .fade-leave-active {
+  transition: opacity .5s
 }
-.fade-leave-active {
-  transition: all .3s ease;
-  opacity: 0;
-}
-.fade-enter,.slide-col-leave-active {
-  opacity: 1;
+.fade-enter, .fade-leave-to /* .fade-leave-active in below version 2.1.8 */ {
+  opacity: 0
 }
 
 // fold
