--- a/src/scss/ui.scss
+++ b/src/scss/ui.scss
@@ -15,12 +15,7 @@
 
 // bg color
 .ui-bg-gradient{
-    background: -webkit-linear-gradient(right, #ff7005, #ff8932);
-    background: -moz-linear-gradient(right, #ff7005, #ff8932);
-    background: -o-linear-gradient(right, #ff7005, #ff8932);
-    background: linear-gradient(to left, #ff7005, #ff8932);
-    background: -ms-linear-gradient(right, #ff7005 0%,#ff8932 100%);// ie
-    color: white;
+    @include color-gradient;
 }
 .ui-bg-orange{
     background-color: #ff6c00;
