首页雷达图被挡住tip修复

--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -135,6 +135,9 @@ input,textarea{
 .overflow-hide {
     overflow: hidden !important;
 }
+.overflow-visible{
+    overflow: visible;
+}
 
 // flex布局
 .flex {
